--- a/src/app/shared/pages/home-page/home-page.html
+++ b/src/app/shared/pages/home-page/home-page.html
@@ -5,9 +5,9 @@
   "
 >
   <div class="hero-overlay w-screen h-screen absolute z-10"></div>
-  <div class="hero-content text-neutral-content text-center absolute z-20 lg:ml-20">
-    <div class="max-w-md">
-      <h1 class="mb-8 text-7xl font-bold text-white">CountryApp</h1>
+  <div class="flex flex-wrap place-content-center w-full md:w-md p-4 md:absolute z-20 lg:ml-20">
+    <div class="text-center">
+      <h1 class="mb-8 text-5xl md:text-7xl font-bold text-white">CountryApp</h1>
       <p class="mb-5 p-4 rounded-lg bg-white/30 text-white">
         Explora el mundo desde tu navegador. Descubre información detallada sobre países, sus
         capitales, población, idiomas y mucho más. Tu guía completa para conocer todas las naciones
