--- a/src/app/shared/components/top-menu/top-menu.html
+++ b/src/app/shared/components/top-menu/top-menu.html
@@ -62,7 +62,7 @@
   </li>
   }@else if(isDetailsPage()) {
   <li>
-    <a [routerLink]="['/', paths.search, paths.region]" class="bg-primary/80 font-bold text-black">
+    <a [routerLink]="['/', paths.search, paths.region]" class="bg-primary/20 text-white">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
         <path
           fill="currentColor"
