--- a/src/app/shared/components/top-menu/top-menu.html
+++ b/src/app/shared/components/top-menu/top-menu.html
@@ -6,7 +6,7 @@
       [routerLinkActive]="['bg-primary/80', 'font-bold', 'text-black']"
       [routerLinkActiveOptions]="{ exact: true }"
       class="tooltip"
-      data-tip="Región"
+      data-tip="Region"
     >
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
         <path
@@ -21,7 +21,7 @@
         />
         <path fill="currentColor" d="M10.5 9a1.5 1.5 0 1 1-3 0a1.5 1.5 0 0 1 3 0" />
       </svg>
-      <span class="hidden lg:block">Región</span>
+      <span class="hidden lg:block">Region</span>
     </a>
   </li>
   <li>
@@ -30,7 +30,7 @@
       [routerLinkActive]="['bg-primary/80', 'font-bold', 'text-black']"
       [routerLinkActiveOptions]="{ exact: true }"
       class="tooltip"
-      data-tip="País"
+      data-tip="Country"
     >
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
         <path
@@ -38,7 +38,7 @@
           d="M5.75 1a.75.75 0 0 1 .75.75V3.6l1.72-.344a8.7 8.7 0 0 1 4.925.452l.413.165a7.3 7.3 0 0 0 4.482.304a.73.73 0 0 1 .803 1.084l-1.278 2.131c-.342.57-.513.854-.553 1.163q-.025.195 0 .39c.04.309.211.594.553 1.163l1.56 2.6a.9.9 0 0 1-.553 1.336l-.1.025a8.68 8.68 0 0 1-5.327-.361a8.7 8.7 0 0 0-4.924-.452L6.5 13.6v8.15a.75.75 0 0 1-1.5 0v-20A.75.75 0 0 1 5.75 1"
         />
       </svg>
-      <span class="hidden lg:block">País</span>
+      <span class="hidden lg:block">Country</span>
     </a>
   </li>
   <li>
@@ -70,7 +70,7 @@
         />
         <path fill="currentColor" d="M19 12.75H5a.75.75 0 0 1 0-1.5h14a.75.75 0 0 1 0 1.5" />
       </svg>
-      <span class="hidden lg:block">Volver</span>
+      <span class="hidden lg:block">Go back</span>
     </a>
   </li>
   }
